istio/kubernetes-dashboard-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard
spec:
  hosts:
  - kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: kubernetes-dashboard.kubernetes-dashboard.svc.cluster.local
