istio/monitoring-virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitoring
spec:
  hosts:
  - prometheus.monitoring.svc.cluster.local
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9090
        host: prometheus-operated
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  hosts:
  - alertmanager.monitoring.svc.cluster.local
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9093
        host: alertmanager-operated
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
  - grafana.monitoring.svc.cluster.local
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: monitoring-grafana
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: karma
  namespace: monitoring
spec:
  hosts:
  - karma.monitoring.svc.cluster.local
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8000
        host: karma
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blackbox-exporter
  namespace: monitoring
spec:
  hosts:
  - blackbox-exporter.monitoring.svc.cluster.local
  gateways:
  - istio-system/istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 9115
        host: blackbox-exporter-prometheus-blackbox-exporter
